--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
 multitool changes
 
+3.0.0 (unreleased)
+- update to Cascading 3.0
+- added support for Apache Tez
+
 2.7.0 (unreleased)
 - use Cascading 2.7
 
